<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.klaas.courtcounter.MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/editTextA"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/name_hint_a"
                    android:inputType="textCapWords|textPersonName" />

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/team_a_score"
                        style="@style/ScoreValue"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:gravity="center"
                        android:text="@string/score_value" />

                    <TextView
                        android:id="@+id/team_a_adv"
                        style="@style/Advantage"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="advantage"
                        android:visibility="invisible"/>

                </RelativeLayout>

                <Button
                    android:id="@+id/button1"
                    style="@style/Button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="addOneForTeamA"
                    android:text="@string/button1_text" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/editTextB"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/name_hint_b"
                    android:inputType="textCapWords|textPersonName" />

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/team_b_score"
                        style="@style/ScoreValue"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:gravity="center"
                        android:text="@string/score_value" />

                    <TextView
                        android:id="@+id/team_b_adv"
                        style="@style/Advantage"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="advantage"
                        android:visibility="invisible"/>

                </RelativeLayout>

                <Button
                    android:id="@+id/button2"
                    style="@style/Button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="addOneForTeamB"
                    android:text="@string/button1_text" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/summary_name_a"
                    style="@style/PlayerName"
                    android:text="@string/player_a" />

                <TextView
                    android:id="@+id/summary_set1_a"
                    style="@style/Summary"
                    android:text="0" />

                <TextView
                    android:id="@+id/summary_set2_a"
                    style="@style/Summary"
                    android:text="0" />

                <TextView
                    android:id="@+id/summary_set3_a"
                    style="@style/Summary"
                    android:text="0" />

                <TextView
                    android:id="@+id/summary_set4_a"
                    style="@style/Summary"
                    android:text="0" />

                <TextView
                    android:id="@+id/summary_set5_a"
                    style="@style/Summary"
                    android:text="0" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/summary_name_b"
                    style="@style/PlayerName"
                    android:text="@string/player_b" />

                <TextView
                    android:id="@+id/summary_set1_b"
                    style="@style/Summary"
                    android:text="0" />

                <TextView
                    android:id="@+id/summary_set2_b"
                    style="@style/Summary"
                    android:text="0" />

                <TextView
                    android:id="@+id/summary_set3_b"
                    style="@style/Summary"
                    android:text="0" />

                <TextView
                    android:id="@+id/summary_set4_b"
                    style="@style/Summary"
                    android:text="0" />

                <TextView
                    android:id="@+id/summary_set5_b"
                    style="@style/Summary"
                    android:text="0" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/button3"
        style="@style/Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:onClick="resetAll"
        android:text="@string/button_reset" />


</RelativeLayout>